# mimosa

./: .gitignore  .ocamlformat  404.html  Dockerfile  LICENSE  Makefile  README.md  dune-project  index.html  mimosa.opam  mkdocs.yml
channels/: index.html
doc/: language.md
docs/: channels.md  getting_started.md  index.md  installation.md  license.md  nodes.md  overview.md  simple_example.md  steps.md  types.md
drivers/: args.ml  check.ml  dump.ml  dune  sim.ml
example/: pack2.mim  random.mim  random.ml
examples/: README.md
examples/edge_detector/: README.md  dune  edge_detector.mim  edge_detector_test.ml
examples/fib/: README.md  dune  fib.mim  fib_sim.ml  fib_test.ml  test.ml
examples/fib2/: README.md  dune  fib.mim  fib2.mim  fib2_sim.ml  fib2_test.ml
examples/led/: controller.mim  dune  led_test.ml
examples/minimal/: README.md  dune  example.mim  minimal_example.ml  minimal_sim.ml
examples/pid/: README.md  dune  pid.mim  pid_example.ml  pid_sim.ml
examples/random/: dune  random.mim  random_test.ml  test.ml
installation/: index.html
lib/: c_ast.ml  c_builder.ml  c_printer.ml  ccomp.ml  check.ml  check_parsetree.ml  comp_sim.ml  depend.ml  depend.mli  dependency.ml  dune  eq_ordering.ml  error.ml  eval.ml  global_odering.ml  initialisation.ml  int.ml  lexer.mll  lident.ml  local_ordering.ml  map.ml  monomorphise.ml  norm.ml  norm_builder.ml  norm_printer.ml  normalise.ml  objectify.ml  ocaml_comp.ml  ooir.ml  ooir_builder.ml  ooir_printer.ml  ordering.ml  parse.ml  parser.mly  parsetree.ml  parsetree_builder.ml  ptree.ml  ptree_builder.ml  ptree_printer.ml  reserr.ml  (+14 more)
license/: index.html
nodes/: index.html
overview/: index.html
search/: search_index.json
simple_example/: index.html
steps/: index.html
test/: dune  dune_gen_check.ml  missing_output.mim  multi_inputs.mim  multi_inputs_errors.expected  ocaml_comp.ml  redefine_step_errors.expected  unused_input.mim  unused_input_errors.expected
test/check/: chan_multi_read.mim  chan_multi_read_errors.expected  chan_multi_write.mim  chan_multi_write_errors.expected  chan_no_read.mim  chan_no_read_errors.expected  chan_no_write.mim  chan_no_write_errors.expected  cyclic_in_steps.mim  cyclic_in_steps_errors.expected  cyclic_step.mim  cyclic_step_errors.expected  dune.check.inc  dune_check.args  dune_gen_check.ml  incorrect_type_1.mim  incorrect_type_1_errors.expected  init.mim  init_func_arg.mim  init_func_arg_errors.expected  init_output.mim  init_output_errors.expected  missing_output.mim  missing_output_errors.expected  missing_type_in_proto.mim  missing_type_in_proto_errors.expected  multi_def.mim  multi_def_errors.expected  multi_inputs.mim  multi_inputs_errors.expected  nested_pre.mim  nested_pre_errors.expected  node_input_type.mim  node_input_type_errors.expected  redefine_channel.mim  redefine_channel_errors.expected  redefine_node.mim  redefine_node_errors.expected  redefine_step.mim  redefine_step_errors.expected  (+8 more)
test/dump/: ccomp.expected.c  ccomp.mim  cyclicA.mim  cyclicB.mim  cyclic_error.expected  dune  eqorder.mim  eqorder_output.expected  mono.mim  mono_output.expected  norm.mim  norm_output.expected  ooir_output.expected  packA.mim  packB.mim  packdep_output.expected  test.mim  type_infer.mim  type_infer_output.expected
types/: index.html
