(rule
 (target fib.ml)
 (deps
  (package mimosa))
 (action
  (run mimosa sim %{dep:fib.mim} -o %{target})))

(library
 (name fib)
 (modules fib)
 (libraries mimosa))

(executable
 (name fib_test)
 (modules fib_test)
 (libraries mimosa fib))

(rule
 (alias runtest)
 (action
  (run %{dep:fib_test.exe})))
