(rule
 (target random.ml)
 (deps
  (package mimosa))
 (action
  (run mimosa dump sim %{dep:random.mim} -o %{target})))

(library
 (name random)
 (modules random)
 (libraries mimosa))

(executable
 (name random_test)
 (modules random_test)
 (libraries mimosa random))

(rule
 (alias runtest)
 (action
  (run %{dep:random_test.exe})))
